Fixing tab count going to t2o lines when popup is too narrow and too many tabs are open

--- a/popup/tabfind.css
+++ b/popup/tabfind.css
@@ -45,6 +45,9 @@ body.extraWide {
 
 #tab-count {
 	border: none;
+	white-space: nowrap; 
+	overflow: hidden;
+	text-overflow: clip;
 }
 
 #tabs-all:hover, #tabs-duplicate:hover, #tabs-search:hover {
